--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
+# logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
