--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
    "editor.defaultFormatter": "esbenp.prettier-vscode",
-   "CodeGPT.apiKey": "Ollama"
+   "CodeGPT.apiKey": "Ollama",
+   "editor.formatOnPaste": true,
+   "editor.formatOnSave": true
 }
